--- a/src/app/admin/tables/drop-ship-volume-plan/drop-ship-volume-plan.component.html
+++ b/src/app/admin/tables/drop-ship-volume-plan/drop-ship-volume-plan.component.html
@@ -67,42 +67,42 @@
             </div>
             <div class="ui-g-12 p-1">
                 <div class="ui-g-6">
-                    <label class="font-weight-bold">Yearly Cost</label>
-                    <input class="form-control" [(ngModel)]="plan.YearlyCost" autofocus type="number" />
+                    <label class="font-weight-bold">Yearly Cost By Monthly Plan</label>
+                    <input class="form-control" [(ngModel)]="plan.YearlyCostByMonthlyPlan" autofocus type="number" />
                 </div>
                 <div class="ui-g-6">
-                    <label class="font-weight-bold"> Monthly Price</label>
-                    <input class="form-control" [(ngModel)]="plan.MonthlyPrice" autofocus type="number" />
-                </div>
-            </div>
-            <div class="ui-g-12 p-1">
-                <div class="ui-g-6">
-                    <label class="font-weight-bold">Average Price Per Order</label>
-                    <input class="form-control" [(ngModel)]="plan.AveragePricePerOrder" autofocus type="number" />
-                </div>
-                <div class="ui-g-6">
-                    <label class="font-weight-bold">Average Fee</label>
-                    <input class="form-control" [(ngModel)]="plan.AverageFee" autofocus type="number" />
+                    <label class="font-weight-bold"> Monthly Price By Monthly Plan</label>
+                    <input class="form-control" [(ngModel)]="plan.MonthlyPriceByMonthlyPlan" autofocus type="number" />
                 </div>
             </div>
             <div class="ui-g-12 p-1">
                 <div class="ui-g-6">
-                    <label class="font-weight-bold">Cost For The Year2</label>
-                    <input class="form-control" [(ngModel)]="plan.CostForTheYear2" autofocus type="number" />
+                    <label class="font-weight-bold">Average Price Per Order By Monthly Plan</label>
+                    <input class="form-control" [(ngModel)]="plan.AveragePricePerOrderByMonthlyPlan" autofocus type="number" />
                 </div>
                 <div class="ui-g-6">
-                    <label class="font-weight-bold">Monthly Price3</label>
-                    <input class="form-control" [(ngModel)]="plan.MonthlyPrice3" autofocus type="number" />
+                    <label class="font-weight-bold">Overage Fee By Monthly Plan</label>
+                    <input class="form-control" [(ngModel)]="plan.OverageFeeByMonthlyPlan" autofocus type="number" />
                 </div>
             </div>
             <div class="ui-g-12 p-1">
                 <div class="ui-g-6">
-                    <label class="font-weight-bold">Average Price Per Order4</label>
-                    <input class="form-control" [(ngModel)]="plan.AveragePricePerOrder4" autofocus type="number" />
+                    <label class="font-weight-bold">Cost For The Year2 By Annual Plan</label>
+                    <input class="form-control" [(ngModel)]="plan.CostForTheYear2ByAnnualPlan" autofocus type="number" />
                 </div>
                 <div class="ui-g-6">
-                    <label class="font-weight-bold">Average Fee5</label>
-                    <input class="form-control" [(ngModel)]="plan.AverageFee5" autofocus type="number" />
+                    <label class="font-weight-bold">Monthly Price3 By Annual Plan</label>
+                    <input class="form-control" [(ngModel)]="plan.MonthlyPrice3ByAnnualPlan" autofocus type="number" />
+                </div>
+            </div>
+            <div class="ui-g-12 p-1">
+                <div class="ui-g-6">
+                    <label class="font-weight-bold">Average Price Per Order4 By Annual Plan</label>
+                    <input class="form-control" [(ngModel)]="plan.AveragePricePerOrder4ByAnnualPlan" autofocus type="number" />
+                </div>
+                <div class="ui-g-6">
+                    <label class="font-weight-bold">Overage Fee5 By Annual Plan</label>
+                    <input class="form-control" [(ngModel)]="plan.OverageFee5ByAnnualPlan" autofocus type="number" />
                 </div>
             </div>
 
