--- a/src/app/home/userDialog.html
+++ b/src/app/home/userDialog.html
@@ -1,5 +1,12 @@
+<p-toast position="top-right"></p-toast>
 <div class="card-body">
-    <form [formGroup]="form" (ngSubmit)="submit()">
+    <div *ngIf="isFirstEntry" class="text-center">
+        <button (click)="firstEntry('existing')" class="btn  btn-info ">Use Existing Report</button>
+        <hr style="border-top: 1px solid;">
+        <button (click)="firstEntry('new')" class="btn   btn-info ">Generate New Report</button>
+    </div>
+
+    <form *ngIf="isNew" [formGroup]="form" (ngSubmit)="submit()">
         <div class="input-group form-group">
             <div class="input-group-prepend">
                 <span class="input-group-text"><i class="fa fa-user"></i></span>
@@ -64,7 +71,32 @@
             </select>
         </div>
         <div class="form-group text-center">
+            <a style="cursor: pointer;" (click)="goBack()" class="float-left pointer"><i class="fa fa-arrow-left"></i>
+                Back</a>
             <input type="submit" value="Submit" [disabled]="form.invalid" class="btn btn-info btn-sm">
+        </div>
+    </form>
+
+    <form *ngIf="isExisting" [formGroup]="form1" (ngSubmit)="submit1()">
+        <div class="input-group form-group">
+            <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fa fa-file-text"></i></span>
+            </div>
+            <input type="text" formControlName="reportId" class="form-control text-uppercase"
+                placeholder="Enter Quotation number (ex: PC-123-V1)" required>
+
+        </div>
+        <div *ngIf="form1.controls['reportId'].invalid && (form1.controls['reportId'].dirty || form1.controls['reportId'].touched)"
+            class="alert alert-danger">
+            <div *ngIf="form1.controls['reportId'].errors.required">
+                Quotation Number / Report Id is required.
+            </div>
+        </div>
+
+        <div class="form-group text-center">
+            <a style="cursor: pointer;" (click)="goBack()" class="float-left pointer"><i class="fa fa-arrow-left"></i>
+                Back</a>
+            <input type="submit" value="Submit" [disabled]="form1.invalid" class="btn btn-info btn-sm">
         </div>
     </form>
 </div>
