--- a/src/app/admin/admin-login/admin-login.component.html
+++ b/src/app/admin/admin-login/admin-login.component.html
@@ -15,10 +15,9 @@
                             placeholder="username">
 
                     </div>
-                    <div  *ngIf="signinForm.controls['username'].hasError('required') && signinForm.controls['username'].touched" class="alert alert-danger">
-                        <small
-                           
-                            class="form-error-msg">
+                    <div *ngIf="signinForm.controls['username'].hasError('required') && signinForm.controls['username'].touched"
+                        class="alert alert-danger">
+                        <small class="form-error-msg">
                             Username is required </small>
                     </div>
                     <div class="input-group form-group">
@@ -29,10 +28,9 @@
                             placeholder="password">
 
                     </div>
-                    <div  *ngIf="signinForm.controls['password'].hasError('required') && signinForm.controls['password'].touched" class="alert alert-danger">
-                        <small
-                           
-                            class="form-error-msg">
+                    <div *ngIf="signinForm.controls['password'].hasError('required') && signinForm.controls['password'].touched"
+                        class="alert alert-danger">
+                        <small class="form-error-msg">
                             Password is required </small>
                     </div>
                     <div class="row align-items-center remember">
@@ -40,7 +38,10 @@
                     </div>
                     <div class="form-group">
                         <input type="submit" [disabled]="signinForm.invalid" value="Login"
-                            class="btn float-right login_btn">
+                            class="btn btn-block float-right login_btn mb-3 mt-3">
+                    </div>
+                    <div class="form-group text-right">
+                        <a style="cursor: pointer;" (click)="forgotPassword()">Forgot Password?</a>
                     </div>
                 </form>
             </div>
