--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -21,3 +21,21 @@
 :host ::ng-deep select.form-control:not([size]):not([multiple]) {
     height: auto;
 }
+
+.hr-sect {
+	display: flex;
+	flex-basis: 100%;
+	align-items: center;
+	color: rgba(0, 0, 0, 0.35);
+	margin: 8px 0px;
+}
+.hr-sect::before,
+.hr-sect::after {
+	content: "";
+	flex-grow: 1;
+	background: rgba(0, 0, 0, 0.35);
+	height: 1px;
+	font-size: 0px;
+	line-height: 0px;
+	margin: 0px 8px;
+}
