--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -101,7 +101,7 @@
                                             </select>
                                         </div>
                                         <div class="row pl-4 p-1">
-                                            <label class="col-md-8">No of Trading Partnerrs to be compliance
+                                            <label class="col-md-8">No of Trading Partners to be compliance
                                                 tested</label>
                                             <input [(ngModel)]="noTPComplienceTested"
                                                 (keyup)="changeNoTPComplienceTested($event)" type="number" min="0"
@@ -190,7 +190,7 @@
                                                     <select class="form-control" [(ngModel)]="i.integratedERPDiPulse"
                                                         (ngModelChange)="ediDocsSelectChange($event)">
                                                         <option>Only be used in DiPulse</option>
-                                                        <option>Outbound from Trading Partner</option>
+                                                        <option>Outbound to Trading Partner</option>
                                                         <option selected>Inbound from Trading Partner</option>
                                                     </select>
                                                 </td>
@@ -225,7 +225,7 @@
                                     </table>
                                 </div>
                             </div>
-                            <div class="row mb-2 m-0">
+                            <div *ngIf="noEdiDocs > 0" class="row mb-2 m-0">
                                 <label class="col-md-4 p-1">Enter the number of trading partners under EDI on
                                     scope</label>
                                 <div class="col-md-8 p-1">
@@ -1423,3 +1423,6 @@
         </div>
     </div>
 </div>
+<ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">
+    <p style="color: white">Please Wait. </p>
+</ngx-spinner>
